--- a/web/index.html
+++ b/web/index.html
@@ -99,7 +99,7 @@
             <p><strong>Endereço:</strong> Largo do Bodegão, 46 - Santa Cruz, Rio de Janeiro - RJ, 23550-133</p>
             <p><strong>Email para comunicação:</strong> bibliotechprojeto@gmail.com</p>
             <p>Esse é um projeto desenvolvido pela turma 6311/23 de técnico em informática da <strong>Escola Técnica Estadual de Santa Cruz</strong>.</p>
-            <strong>Fundação de Apoio a Escola Técnica - FATEC</strong>
+            <strong>Fundação de Apoio a Escola Técnica - FAETEC</strong>
         </div>
     </footer>
 </body>
