--- a/web/cadastro/cadastro.html
+++ b/web/cadastro/cadastro.html
@@ -72,7 +72,7 @@
                                 <option value="1">Informática</option>
                                 <option value="2">Segurança do Trabalho</option>
                                 <option value="3">Enfermagem</option>
-                                <option value="4">Mecânica</option>
+                                <option value="4">Eletromecânica</option>
                             </select>
                         </div>                        
                         <br>
